# ralph-wiggum-tutorial

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  HELLO_PATTERN_DOCUMENTATION.md  IMPLEMENTATION_PLAN.md  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json  post-create.sh
.github/agents/: plan-agent.md
.github/workflows/: ci.yml
e2e/: comic-generator.spec.ts  hello.spec.ts  pong.spec.ts  weather.spec.ts
frontend/: package-lock.json  package.json
frontend/src/: main.ts
frontend/src/islands/comic/: ComicGenerator.tsx  index.tsx
frontend/src/islands/hello/: HelloIsland.tsx
frontend/src/islands/pong/: LeaderboardPanel.tsx  PongCanvas.tsx  PongIsland.tsx  gameEngine.ts  index.tsx  (+1 more)
frontend/src/types/: index.ts
migrations/versions/: a1b2c3d4e5f6_create_leaderboard_entries_table.py
old-spec/: starter.md
script/: test  test-e2e
specs/: home-weather-forecast-widget.md  issue-comic-generator-sdlc_planner-add-comic-system.md  pong-game-leaderboard.md
src/app/: config.py
src/app/controllers/: __init__.py  comic.py  hello.py  leaderboard.py
src/app/models/: __init__.py  hello.py  leaderboard.py
src/app/schemas/: __init__.py  comic.py  hello.py  leaderboard.py
src/app/services/: __init__.py  comic_service.py  weather_service.py
src/app/templates/: base.html
src/app/views/: __init__.py  comic.py  hello.py  pong.py  weather.py
tests/: conftest.py  test_comic_service.py  test_hello.py  test_leaderboard.py  test_weather.py
(+9 files in other folders)
